[package]
name = "init_array"
description = "Initialize arrays itemwise"
version = "0.3.0"
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"
authors = ["Markus Everling <markuseverling@gmail.com>"]
keywords = ["arrays"]
repository = "https://github.com/Sp00ph/init_array"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
nightly = []
alloc = []

[dependencies]
